1.0.15
Use new Generic image location and SQL 2019 image as default (mcr.microsoft.com/businesscentral:{0}-0.1.0.25 is the latest with SQL 2017)
Issue #1469 Install-NavSipCryptoProvider cannot be executed twice

1.0.14
Add parameter -features to Compile-AppInBcContainer to add support of the alc features parameter
Add parameter -bakFile to Restore-BcDatabaseFromArtifacts to allow restoring custom database using the artifact binaries
Issue #1426 performance test samples are installed before performance test toolkit
Clean-BcContainerDatabase will now cleanup Schema and company when -doNotSaveData is specified
UnInstall-BcContainerApp will now cleanup Schema when -doNotSaveData is specified together with -doNotSaveSchema
Regression: Backup-BcContainerDatabases couldn't backup the tenant template database when specified
Setting default container memory size to 8Gb when using hyperv
Remove references to specific images

1.0.13
Issue #1414 the magic setting defaultTenantHasAllowAppDatabaseWrite=Y is not used when using -cleandatabase or -newdatabase
Add parameter -publishedOnly to Get-BcContainerAppInfo to get published apps (no tenant specified)
Add parameter -doNotCopyDatabase to New-BcContainerTenant to mount an existing database (move from other container)
Add parameter -doNotRemoveDatabase to Remove-BcContainerTenant to avoid removing the database (move to other container)
Add parameter -PublisherAzureActiveDirectoryTenantId to Publish-BcContainerApp
New function Restore-BcDatabaseFromArtifacts for restoring databases from artifacts on an external sql server
New function Remove-BcDatabase for removing databases from an external sql server
New parameters -databasePrefix and -replaceExternalDatabases to New-BcContainer to allow New-BcContainer to create/replace databases on external SQL Server
Issue #1417 Add parameters -databaseCredential and -compress to Backup-BcContainerDatabases