@@ -103,7 +103,7 @@ FunctionsToExport = 'Add-FontsToBcContainer', 'Add-GitToAlProjectFolder',
                'Get-NavArtifactUrl', 'Get-NavVersionFromVersionInfo', 
                'Get-TestsFromBcContainer', 'Import-BcContainerLicense', 
                'Import-ConfigPackageInBcContainer', 'Import-DeltasToNavContainer', 
-               'Import-ObjectsToNavContainer', 
+               'Import-ObjectsToNavContainer', 'UploadImportAndApply-ConfigPackageInBcContainer',
                'Import-PfxCertificateToBcContainer', 
                'Import-TestToolkitToBcContainer', 'Install-BcContainerApp', 
                'Install-NAVSipCryptoProviderFromBcContainer', 
