@@ -1,6 +1,7 @@
 1.0.15
 Use new Generic image location and SQL 2019 image as default (mcr.microsoft.com/businesscentral:{0}-0.1.0.25 is the latest with SQL 2017)
 Issue #1469 Install-NavSipCryptoProvider cannot be executed twice
+Add new function UploadImportAndApply-ConfigPackageInBcContainer, which uses management APIs to Upload, Import and Apply a config package in a container
 
 1.0.14
 Add parameter -features to Compile-AppInBcContainer to add support of the alc features parameter
